# swc-plugin-dev-expression

./: Cargo.toml  README.md  package.json
.github/workflows/: publish.yml
src/: lib.rs
