[package]
name = "swc-plugin-dev-expression"
version = "0.2.0"
edition = "2021"
author = "Angel Wells"
license = "GPL-3.0-or-later"
description = "A port for SWC of babel-plugin-dev-expression, which expands __DEV__ and wraps invariant and warning calls"
categories = ["wasm", "parsing"]
keywords = ["swc", "plugin"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"

[dependencies]
serde = "1"
swc_core = { version = "0.44.*", features = ["plugin_transform"] }
tracing = "0.1"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
